# gelsight-ros

./: .gitignore  CMakeLists.txt  README.md  install_gelsight.sh  mypy.ini  package.xml  requirements.txt  setup.py
config/: gelsight.yml  gelsight_proc.yml  image_proc.yml
include/: tracking_class.h
launch/: gelsight.launch  gelsight_proc.launch  gelsight_stream.launch  get_mpp.launch  icp.launch  image_proc.launch  label_data.launch  plot_grad.launch  pytouch.launch  record.launch  train.launch
msg/: GelsightFlowStamped.msg  GelsightMarkers.msg  GelsightMarkersStamped.msg  MarkerFlow.msg
nodes/: processing  processing.py
scripts/: calibrate.py  config.csv  gelsight.py  gelsight_proc.py  gelsight_util.py  get_mpp.py  label_data.py  perform_icp.py  plot_grad.py  processing.py  record.py  train.py  vis_flow.py
src/: calibrate.cpp  gelsight_stream.cpp  image_stream.cpp  tracking_class.cpp
src/gelsight_ros/: __init__.py  data.py  depth.py  gs3drecon.py  markers.py  model.py  proc.py  stream.py  types.py  util.py
