<?xml version="1.0"?>
<package format="2">
  <name>gelsight_ros</name>
  <version>0.1.0</version>
  <description>The gelsight_ros package</description>

  <maintainer email="mccarth@purdue.edu">Harrison McCarty</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>image_transport</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
